modified dashboard page

--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -242,6 +242,11 @@ img { max-width: 100%; }
 	margin-top: 25px;
 }
 
+.navBarBg{
+	background-color: #3b3c3e;
+    height: 475px;
+}
+
 
 
 /***** Media queries *****/
