--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -145,7 +145,7 @@ img { max-width: 100%; }
     color: #fff;
     -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px;
 }
-.btn-link-2:hover, .btn-link-2:focus, 
+.btn-link-2:hover, .btn-link-2:focus,
 .btn-link-2:active, .btn-link-2:active:focus { outline: 0; opacity: 0.6; background: rgba(0, 0, 0, 0.3); color: #fff; }
 
 .btn-link-2.btn-link-2-facebook { background: #4862a3; }
@@ -173,7 +173,7 @@ img { max-width: 100%; }
 .top-content .description a {
 	color: #fff;
 }
-.top-content .description a:hover, 
+.top-content .description a:hover,
 .top-content .description a:focus { border-bottom: 1px dotted #fff; }
 
 /*Form css*/
@@ -244,9 +244,17 @@ img { max-width: 100%; }
 
 .navBarBg{
 	background-color: #3b3c3e;
-    height: 475px;
+  height: 475px;
 }
 
+.modelColor{
+  background-color: #acadab;
+}
+
+.modelMargin{
+	margin-left: 30%;
+    margin-right: 30%;
+}
 
 
 /***** Media queries *****/
@@ -256,13 +264,13 @@ img { max-width: 100%; }
 @media (min-width: 768px) and (max-width: 991px) {}
 
 @media (max-width: 767px) {
-	
+
 	.inner-bg { padding: 60px 0 110px 0; }
 
 }
 
 @media (max-width: 415px) {
-	
+
 	h1, h2 { font-size: 32px; }
 
 }
